# computer-graphics-oop

./: CMakeLists.txt  README.md  main.cpp
karya/: batikUTS.cpp  bunga.cpp  googleDrive.cpp  karya.h  piramidaPersegi.cpp  smileEmoticon.cpp
shape/: belahketupat.cpp  ellipse.cpp  jajargenjang.cpp  lingkaran.cpp  persegi.cpp  segitiga.cpp  shape.cpp  shape.h  trapesiumsiku.cpp
stroke/: stroke.cpp  stroke.h
transformation/: rotasi.cpp  skalasi.cpp  transformation.h  translasi.cpp
util/: karyaMenu.cpp  mainMenu.cpp  shapeMenu.cpp  util.cpp  util.h
